--- a/mysitetemplate/package.json
+++ b/mysitetemplate/package.json
@@ -23,7 +23,9 @@
     "bootstrap": "^4.5.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
+    "ngx-quill": "^12.0.1",
     "popper.js": "^1.16.1",
+    "quill": "^1.3.7",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
